examples/napi/tests/build_error_tests/reference_family_class_instance_mutability.stderr
error[E0277]: the trait bound `ClassInstance<'static, u32>: Deref` is not satisfied
 --> tests/build_error_tests/reference_family_class_instance_mutability.rs:9:18
  |
9 |   assert_deref::<ClassInstance<'static, u32>>();
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Deref` is not implemented for `ClassInstance<'static, u32>`
  |
note: required by a bound in `assert_deref`
 --> tests/build_error_tests/reference_family_class_instance_mutability.rs:5:20
  |
5 | fn assert_deref<T: Deref>() {}
  |                    ^^^^^ required by this bound in `assert_deref`

error[E0277]: the trait bound `ClassInstance<'static, u32>: DerefMut` is not satisfied
  --> tests/build_error_tests/reference_family_class_instance_mutability.rs:10:22
   |
10 |   assert_deref_mut::<ClassInstance<'static, u32>>();
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `DerefMut` is not implemented for `ClassInstance<'static, u32>`
   |
note: required by a bound in `assert_deref_mut`
  --> tests/build_error_tests/reference_family_class_instance_mutability.rs:6:24
   |
 6 | fn assert_deref_mut<T: DerefMut>() {}
   |                        ^^^^^^^^ required by this bound in `assert_deref_mut`
