examples/napi/tests/build_error_tests/reference_family_class_instance_mutability.rs
use std::ops::{Deref, DerefMut};

use napi::bindgen_prelude::ClassInstance;

fn assert_deref<T: Deref>() {}
fn assert_deref_mut<T: DerefMut>() {}

fn main() {
  assert_deref::<ClassInstance<'static, u32>>();
  assert_deref_mut::<ClassInstance<'static, u32>>();
}
